# pyproject-install

./: CHANGELOG.rst  README.rst  noxfile.py  pyproject.toml
.github/workflows/: ci.yaml
src/pyproject_install/: __main__.py  _core.py
tests/: conftest.py  test_install.py  test_metadata_extraction.py  test_validation.py
