[build-system]
requires = ["flit-core >= 3.2.0"]
build-backend = "flit_core.buildapi"

[project]
dynamic = [
  "version",
]
name = "pyproject-install"
description = "CLI for installing Python wheels"
readme = "README.rst"
requires-python = ">= 3.7"
license.file = "COPYING"
authors = [
  { name = "layday", email = "layday@protonmail.com" },
]
url.homepage = "https://github.com/layday/pyproject-install"
# url.documentation = "readthedocs.org"
url.repository = "https://github.com/layday/pyproject-install"
url.changelog = "https://github.com/layday/pyproject-install/blob/main/CHANGELOG.rst"
dependencies = [
  "installer",
]

[project.optional-dependencies]
dev = [
  "black",
  "isort",
]
test = [
  "coverage[toml]",
  "pytest",
]

[project.scripts]
pyproject-install = "pyproject_install._core:main"

[tool.flit]
module.name = "pyproject_install"


[tool.coverage.run]
source_pkgs = ["pyproject_install"]
parallel = true
branch = true
dynamic_context = "test_function"

[tool.coverage.paths]
combine = ["src/pyproject_install", "**/pyproject_install"]


[tool.pyright]
include = ["src"]


[tool.black]
line_length = 99

[tool.isort]
profile = "black"
combine_as_imports = true
force_sort_within_sections = true
line_length = 99
